--- a/a/package.json
+++ b/a/package.json
@@ -6,9 +6,13 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "migrate-to-cloudflare": "node scripts/migrate-to-cloudflare.js",
+    "migrate-to-cloudflare:dry-run": "node scripts/migrate-to-cloudflare.js --dry-run"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.883.0",
+    "@aws-sdk/s3-request-presigner": "^3.883.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
