Fix authentication and data fetching issues - Updated session management and API endpoints for proper data isolation - Fixed truck information display for suppliers - Improved error handling and debugging - Reset password for user 111111 to 12345

--- a/a/package.json
+++ b/a/package.json
@@ -7,6 +7,9 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
+    "setup": "node scripts/setup-dev-environment.js",
+    "setup-documents": "node scripts/setup-supplier-documents.js",
+    "test-db": "curl http://localhost:3000/api/test-db-connection",
     "migrate-to-cloudflare": "node scripts/migrate-to-cloudflare.js",
     "migrate-to-cloudflare:dry-run": "node scripts/migrate-to-cloudflare.js --dry-run"
   },
