Force Dockerfile usage and remove nixpacks.toml

--- a/a/Dockerfile
+++ b/a/Dockerfile
@@ -4,14 +4,20 @@ FROM node:18-alpine
 # Set working directory
 WORKDIR /app
 
-# Copy package files
-COPY package*.json ./
+# Copy package files first
+COPY package.json package-lock.json* ./
 
-# Install dependencies using npm
-RUN npm ci --only=production
+# Remove any pnpm files if they exist
+RUN rm -f pnpm-lock.yaml .pnpmfile.cjs
+
+# Install dependencies using npm only
+RUN npm install --production=false
 
 # Copy source code
 COPY . .
+
+# Remove any remaining pnpm files
+RUN rm -f pnpm-lock.yaml .pnpmfile.cjs
 
 # Build the application
 RUN npm run build
