--- a/a/Dockerfile
+++ b/a/Dockerfile
@@ -1,29 +1,26 @@
 # Use Node.js 18
 FROM node:18-alpine
 
+# Install pnpm
+RUN npm install -g pnpm
+
 # Set working directory
 WORKDIR /app
 
-# Copy package files first
-COPY package.json package-lock.json* ./
-
-# Remove any pnpm files if they exist
-RUN rm -f pnpm-lock.yaml .pnpmfile.cjs
-
-# Install dependencies using npm only
-RUN npm install --production=false
-
-# Copy source code
+# Copy everything first
 COPY . .
 
-# Remove any remaining pnpm files
-RUN rm -f pnpm-lock.yaml .pnpmfile.cjs
+# Restore pnpm lockfile if it exists
+RUN if [ -f pnpm-lock.yaml.backup ]; then mv pnpm-lock.yaml.backup pnpm-lock.yaml; fi
+
+# Install dependencies using pnpm
+RUN pnpm install --no-frozen-lockfile
 
 # Build the application
-RUN npm run build
+RUN pnpm run build
 
 # Expose port
 EXPOSE 3000
 
 # Start the application
-CMD ["npm", "start"]
+CMD ["pnpm", "start"]
