--- a/a/env.local.example
+++ b/a/env.local.example
@@ -10,6 +10,8 @@ CLOUDFLARE_R2_BUCKET_NAME=your_bucket_name_here
 CLOUDFLARE_R2_PUBLIC_URL=https://your-bucket.your-account-id.r2.cloudflarestorage.com
 
 # Application Configuration
+# IMPORTANT: Update this with your deployed URL when deploying
+# This URL will be included in WhatsApp messages sent to suppliers
 NEXT_PUBLIC_WEBSITE_URL=http://localhost:3000
 NODE_ENV=development
 
